input-sys/src/gen.rs

extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Check if the event has a valid value for the given axis.
 *
 * If this function returns non-zero for an axis and
 * libinput_event_pointer_get_axis_value() returns a value of 0, the event
 * is a scroll stop event.
 *
 * For pointer events that are not of type @ref LIBINPUT_EVENT_POINTER_AXIS,
 * this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_AXIS.
 *
 * @return Non-zero if this event contains a value for this axis
 */
    pub fn libinput_event_pointer_has_axis(event: *mut libinput_event_pointer,
                                           axis: libinput_pointer_axis)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the axis value of the given axis. The interpretation of the value
 * depends on the axis. For the two scrolling axes
 * @ref LIBINPUT_POINTER_AXIS_SCROLL_VERTICAL and
 * @ref LIBINPUT_POINTER_AXIS_SCROLL_HORIZONTAL, the value of the event is in
 * relative scroll units, with the positive direction being down or right,
 * respectively. For the interpretation of the value, see
 * libinput_event_pointer_get_axis_source().
 *
 * If libinput_event_pointer_has_axis() returns 0 for an axis, this function
 * returns 0 for that axis.
 *
 * For pointer events that are not of type @ref LIBINPUT_EVENT_POINTER_AXIS,
 * this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_AXIS.
 *
 * @return The axis value of this event
 *
 * @see libinput_event_pointer_get_axis_value_discrete
 */
    pub fn libinput_event_pointer_get_axis_value(event:
                                                     *mut libinput_event_pointer,
                                                 axis: libinput_pointer_axis)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the source for a given axis event. Axis events (scroll events) can
 * be caused by a hardware item such as a scroll wheel or emulated from
 * other input sources, such as two-finger or edge scrolling on a
 * touchpad.
 *
 * If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_FINGER, libinput
 * guarantees that a scroll sequence is terminated with a scroll value of 0.
 * A caller may use this information to decide on whether kinetic scrolling
 * should be triggered on this scroll sequence.
 * The coordinate system is identical to the cursor movement, i.e. a
 * scroll value of 1 represents the equivalent relative motion of 1.
 *
 * If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL, no terminating
 * event is guaranteed (though it may happen).
 * Scrolling is in discrete steps, the value is the angle the wheel moved
 * in degrees. The default is 15 degrees per wheel click, but some mice may
 * have differently grained wheels. It is up to the caller how to interpret
 * such different step sizes.
 *
 * If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_CONTINUOUS, no
 * terminating event is guaranteed (though it may happen).
 * The coordinate system is identical to the cursor movement, i.e. a
 * scroll value of 1 represents the equivalent relative motion of 1.
 *
 * If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL_TILT, no
 * terminating event is guaranteed (though it may happen).
 * Scrolling is in discrete steps and there is no physical equivalent for
 * the value returned here. For backwards compatibility, the value returned
 * by this function is identical to a single mouse wheel rotation by this
 * device (see the documentation for @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL
 * above). Callers should not use this value but instead exclusively refer
 * to the value returned by libinput_event_pointer_get_axis_value_discrete().
 *
 * For pointer events that are not of type @ref LIBINPUT_EVENT_POINTER_AXIS,
 * this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_AXIS.
 *
 * @return The source for this axis event
 */
    pub fn libinput_event_pointer_get_axis_source(event:
                                                      *mut libinput_event_pointer)
     -> libinput_pointer_axis_source;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the axis value in discrete steps for a given axis event. How a
 * value translates into a discrete step depends on the source.
 *
 * If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL, the discrete
 * value correspond to the number of physical mouse wheel clicks.
 *
 * If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_CONTINUOUS or @ref
 * LIBINPUT_POINTER_AXIS_SOURCE_FINGER, the discrete value is always 0.
 *
 * @return The discrete value for the given event.
 *
 * @see libinput_event_pointer_get_axis_value
 */
    pub fn libinput_event_pointer_get_axis_value_discrete(event:
                                                              *mut libinput_event_pointer,
                                                          axis:
                                                              libinput_pointer_axis)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_pointer_get_base_event(event:
                                                     *mut libinput_event_pointer)
     -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * @return The event time for this event
 */
    pub fn libinput_event_touch_get_time(event: *mut libinput_event_touch)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_touch_get_time_usec(event:
                                                  *mut libinput_event_touch)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * Get the slot of this touch event. See the kernel's multitouch
 * protocol B documentation for more information.
 *
 * If the touch event has no assigned slot, for example if it is from a
 * single touch device, this function returns -1.
 *
 * For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref
 * LIBINPUT_EVENT_TOUCH_UP, @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref
 * LIBINPUT_EVENT_TOUCH_CANCEL, this function returns 0.
 *
 * @note It is an application bug to call this function for events of type
 * other than @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref LIBINPUT_EVENT_TOUCH_UP,
 * @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref LIBINPUT_EVENT_TOUCH_CANCEL.
 *
 * @return The slot of this touch event
 */
    pub fn libinput_event_touch_get_slot(event: *mut libinput_event_touch)
     -> i32;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * Get the seat slot of the touch event. A seat slot is a non-negative seat
 * wide unique identifier of an active touch point.
 *
 * Events from single touch devices will be represented as one individual
 * touch point per device.
 *
 * For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref
 * LIBINPUT_EVENT_TOUCH_UP, @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref
 * LIBINPUT_EVENT_TOUCH_CANCEL, this function returns 0.
 *
 * @note It is an application bug to call this function for events of type
 * other than @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref LIBINPUT_EVENT_TOUCH_UP,
 * @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref LIBINPUT_EVENT_TOUCH_CANCEL.
 *
 * @return The seat slot of the touch event
 */
    pub fn libinput_event_touch_get_seat_slot(event:
                                                  *mut libinput_event_touch)
     -> i32;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * Return the current absolute x coordinate of the touch event, in mm from
 * the top left corner of the device. To get the corresponding output screen
 * coordinate, use libinput_event_touch_get_x_transformed().
 *
 * For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref
 * LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0.
 *
 * @note It is an application bug to call this function for events of type
 * other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref
 * LIBINPUT_EVENT_TOUCH_MOTION.
 *
 * @param event The libinput touch event
 * @return The current absolute x coordinate
 */
    pub fn libinput_event_touch_get_x(event: *mut libinput_event_touch)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * Return the current absolute y coordinate of the touch event, in mm from
 * the top left corner of the device. To get the corresponding output screen
 * coordinate, use libinput_event_touch_get_y_transformed().
 *
 * For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref
 * LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0.
 *
 * @note It is an application bug to call this function for events of type
 * other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref
 * LIBINPUT_EVENT_TOUCH_MOTION.
 *
 * @param event The libinput touch event
 * @return The current absolute y coordinate
 */
    pub fn libinput_event_touch_get_y(event: *mut libinput_event_touch)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * Return the current absolute x coordinate of the touch event, transformed to
 * screen coordinates.
 *
 * For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref
 * LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0.
 *
 * @note It is an application bug to call this function for events of type
 * other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref
 * LIBINPUT_EVENT_TOUCH_MOTION.
 *
 * @param event The libinput touch event
 * @param width The current output screen width
 * @return The current absolute x coordinate transformed to a screen coordinate
 */
    pub fn libinput_event_touch_get_x_transformed(event:
                                                      *mut libinput_event_touch,
                                                  width: u32) -> f64;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * Return the current absolute y coordinate of the touch event, transformed to
 * screen coordinates.
 *
 * For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref
 * LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0.
 *
 * @note It is an application bug to call this function for events of type
 * other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref
 * LIBINPUT_EVENT_TOUCH_MOTION.
 *
 * @param event The libinput touch event
 * @param height The current output screen height
 * @return The current absolute y coordinate transformed to a screen coordinate
 */
    pub fn libinput_event_touch_get_y_transformed(event:
                                                      *mut libinput_event_touch,
                                                  height: u32) -> f64;
}
extern "C" {
    /**
 * @ingroup event_touch
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_touch_get_base_event(event:
                                                   *mut libinput_event_touch)
     -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup event_gesture
 *
 * @return The event time for this event
 */
    pub fn libinput_event_gesture_get_time(event: *mut libinput_event_gesture)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_gesture
 *
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_gesture_get_time_usec(event:
                                                    *mut libinput_event_gesture)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_gesture
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_gesture_get_base_event(event:
                                                     *mut libinput_event_gesture)
     -> *mut libinput_event;
}
